--- a/404.html
+++ b/404.html
@@ -15,8 +15,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, initial-scale=1, maximum-scale=2, user-scalable=yes, minimum-scale=1">
   <!-- styles & images -->
   <script src="https://use.fontawesome.com/1d1e476666.js"></script>
-  <link href="https://fonts.googleapis.com/css?family=Roboto+Slab|Roboto:400,700" rel="stylesheet">
-  <link href="css/styles.min.css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&family=Roboto:ital,wght@0,300;0,400;0,700;1,300&display=swap" rel="stylesheet">  <link href="css/styles.min.css" rel="stylesheet">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <!-- scripts -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
@@ -28,82 +29,21 @@
   <!-- header -->
   <header>
     <div class="width">
-      <h1><a href="/">Hannah Stein</a></h1>
+      <h1><a href="/">H</a></h1>
         <a class="mobile-nav" title="toggle menu"><span></span></a>
         <nav>
-          <a href="/" title="portfolio">portfolio</a>
-          <a href="about.html" title="about" class="active">about</a>
-          <a href="#contact" title="contact">contact</a>
+          <a href="/" title="portfolio">work</a>
+          <a href="about.html" title="about">about</a>
+          <!-- <a href="images/Stein_resume.pdf" target="_blank" title="Download Hannah's resume">resume</a> -->
+          <a href="mailto:hannahsteindesigns@gmail.com?subject=Hello%20from%20hannahsteindesigns.com" title="contact">contact</a>
         </nav>
     </div>
-    </header>
+  </header>
   <!-- content -->
   <section id="content" class="width center">
     <h1>Yikes!</h1>
     <p><a href="http://hannahsteindesigns.com">Something went wrong. Click to go home!</a></p>
   </section>
-  <!-- footer -->
-  <!-- footer -->
-  <footer id="contact">
-    <div class="width">
-      <section>
-        <div class="social">
-          <h2>Let's talk.</h2>
-          <a href="mailto:&#104;&#97;&#110;&#110;&#97;&#104;&#115;&#116;&#101;&#105;&#110;&#100;&#101;&#115;&#105;&#103;&#110;&#115;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;" title="email me">
-            <span class="fa-stack">
-              <i class="fa fa-circle fa-stack-2x" aria-hidden="true"></i>
-              <i class="fa fa-envelope fa-stack-1x" aria-hidden="true"></i>
-            </span>
-            <span>hannahsteindesigns@gmail.com</span>
-          </a>
-          <!-- <a href="https://www.linkedin.com/in/hannahsteindesigns" title="connect on linkedin">
-            <span class="fa-stack">
-              <i class="fa fa-circle fa-stack-2x" aria-hidden="true"></i>
-              <i class="fa fa-linkedin fa-stack-1x" aria-hidden="true"></i>
-            </span>
-            <span>linkedin.com/in/hannahsteindesigns</span>
-          </a> -->
-          <!-- <a href="https://www.behance.net/hannahsteindesigns" title="see more of my work on behance">
-            <img src="images/behance.svg" width="24" />
-            <span>behance.net/hannahsteindesigns</span>
-          </a> -->
-          <a href="https://github.com/hannahsteindesigns/" title="see my original files on github">
-            <span class="fa-stack">
-              <i class="fa fa-circle fa-stack-2x" aria-hidden="true"></i>
-              <i class="fa fa-github fa-stack-1x" aria-hidden="true"></i>
-            </span>
-            <span>github.com/hannahsteindesigns</span>
-          </a>
-          <a href="https://issuu.com/hannahsteindesigns" title="see more of my print work on issuu">
-            <span class="fa-stack">
-              <i class="fa fa-circle fa-stack-2x" aria-hidden="true"></i>
-              <i class="fa fa-briefcase fa-stack-1x" aria-hidden="true"></i>
-            </span>
-            <span>issuu.com/hannahsteindesigns</span>
-          </a>
-        </div>
-        <div class="form">
-          <div id="form-messages"></div>
-          <form name="hscontact" id="form" method="post" action="contact.php" novalidate>
-            <div class="name-input">
-              <input required type="text" name="name" id="name">
-              <label for="name" placeholder="Name"></label>
-            </div>
-            <div class="email-input">
-              <input required type="email" name="email" id="email">
-              <label for="email" placeholder="Email"></label>
-            </div>
-            <div class="message-input">
-              <textarea required name="message" id="message"></textarea>
-              <label for="message" placeholder="Send me a message"></label>
-            </div>
-            <input type="text" id="website" name="website" style="display:none;">
-            <button type="submit" id="submitbtn" class="full">Send</button>
-          </form>
-        </div>
-      </section>
-    </div>
-  </footer>
   <script src="js/scripts.min.js"></script>
 </body>
 </html>
