--- a/index.html
+++ b/index.html
@@ -15,8 +15,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, initial-scale=1, maximum-scale=2, user-scalable=yes, minimum-scale=1">
   <!-- styles & images -->
   <script src="https://use.fontawesome.com/1d1e476666.js"></script>
-  <link href="https://fonts.googleapis.com/css?family=Roboto+Slab|Roboto:400,700" rel="stylesheet">
-  <link href="css/styles.min.css" rel="stylesheet">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&family=Roboto:ital,wght@0,300;0,400;0,700;1,300&display=swap" rel="stylesheet">
+  <link href="css/styles.css" rel="stylesheet">
+  
+
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <!-- scripts -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
@@ -29,12 +34,12 @@
   <!-- header -->
   <header>
     <div class="width">
-      <h1><a href="#">H</a></h1>
+      <h1><a href="/">H</a></h1>
         <a class="mobile-nav" title="toggle menu"><span></span></a>
         <nav>
-          <a href="#" title="portfolio" class="active">work</a>
+          <a href="/" title="portfolio" class="active">work</a>
           <a href="about.html" title="about">about</a>
-          <a href="images/Stein_resume.pdf" target="_blank" title="Download Hannah's resume">resume</a>
+          <!-- <a href="images/Stein_resume.pdf" target="_blank" title="Download Hannah's resume">resume</a> -->
           <a href="mailto:hannahsteindesigns@gmail.com?subject=Hello%20from%20hannahsteindesigns.com" title="contact">contact</a>
         </nav>
     </div>
@@ -47,7 +52,7 @@
         <h2 class="text slide_up">
           <span>Hannah</span>
           <span> Stein</span>
-    </h2>
+        </h2>
       </div>
       <div id="intro">
         <div class="box slide_up"></div>
@@ -68,32 +73,54 @@
           <img class="lowres" alt="purchase process design development" src="images/portfolio/low-res/purchase-process.jpg" data-image="images/portfolio/purchase-process.jpg" />
         </a>
         <div class="details">
-          <h3 class="red">purchase process redesign</h3>
+          <h3 class="green">purchase process redesign</h3>
           <h6>TicketBiscuit</h6>
           <p>TicketBiscuit is an online ticketing platform where clients can manage their events and customers can buy tickets. In this project I simplified the purchase process and modernized the design. I focused on optimizing the experience for mobile users especially &mdash; reducing clicks and increasing conversion rates.</p>
           <a class="button ignore" href="portfolio/ticketbiscuit.html" title="View Case Study">view case study</a>
         </div>
       </article>
+      <!-- Amy Burke Counseling -->
+      <article class="slide lightbox right">
+        <a class="progressive img lbSlide" title="<a href='portfolio/amy.html'>check out my Amy Burke Counseling case study</a>" href="images/portfolio/amy.png">
+          <img class="lowres" alt="purchase process design development" src="images/portfolio/low-res/amy.png" data-image="images/portfolio/amy.png" />
+        </a>
+        <div class="details">
+          <h3 class="green">branding &amp; website</h3>
+          <h6>Amy Burke Counseling</h6>
+          <p>Amy came to me with some ideas for a logo and a color that she liked. She had a pretty solid idea of what she wanted her brand to be and entrusted me with fleshing out the details and turning her ideas into reality.</p>
+          <a class="button ignore" href="portfolio/amy.html" title="View Case Study">view case study</a>
+        </div>
+      </article>
       <!-- Transcend -->
-      <article class="right slide lightbox">
+      <article class="slide lightbox">
         <a class="progressive img lbSlide"  title="<a href='portfolio/transcend.html'>check out my Transcend case study</a>" href="images/portfolio/transcend.jpg">
           <img class="lowres" alt="therapy website design development" src="images/portfolio/low-res/transcend.jpg" data-image="images/portfolio/transcend.jpg">
         </a>
         <div class="details">
-          <h3 class="red">logo &amp; custom wordpress theme</h3>
+          <h3 class="green">logo &amp; custom wordpress theme</h3>
           <h6>Transcend Individual and Family Counseling</h6>
           <p>When Robyn opened her practice in 2017 she needed to brand herself with a logo and create an online presence. She wanted something clean and simple while still allowing her personality to shine through.</p>
           <a class="button ignore" href="portfolio/transcend.html" title="View Case Study">view case study</a>
         </div>
       </article>
-      <!-- Case 3 -->
-      <article class="slide lightbox"></article>
-      <!-- Case 4 -->
-      <article class="slide lightbox"></article>
+      <!-- StateServ -->
+      <article class="slide">
+        <div class="details full">
+          <h3 class="green">prescription tracking process</h3>
+          <h6>StateServ Medical</h6>
+          <p>When a patient receives medical oxygen, they are required to have a prescription on file. Before this project, that process was completed entirely outside of our web app through either email or paper files. There was no centralized location to view prescription data and no way to determine which patients were noncompliant.</p> 
+          <p>I was able to build on existing funtionality that our users were already familiar with in order to move this process into the app, and create a process for DME providers to review prescriptions for validity.</p>
+          <a class="button ignore" href="portfolio/stateserv.html" title="More Information">more information</a>
+        </div>
+      </article>
     </section>
   </main>
   <div id="scrollTop"><i class="fa fa-arrow-up" aria-label="back to top"></i></div>
-  <script src="js/scripts.min.js"></script>
+
+
+  <script src="js/scripts.js"></script>
+  
+
   <script>
     var lightbox = $(".lightbox a").not(".ignore");
     lightbox.simpleLightbox();
