--- a/portfolio/ticketbiscuit.html
+++ b/portfolio/ticketbiscuit.html
@@ -15,8 +15,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, initial-scale=1, maximum-scale=2, user-scalable=yes, minimum-scale=1">
   <!-- styles & images -->
   <script src="https://use.fontawesome.com/1d1e476666.js"></script>
-  <link href="https://fonts.googleapis.com/css?family=Roboto+Slab|Roboto:400,700" rel="stylesheet">
-  <link href="../css/styles.min.css" rel="stylesheet">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&family=Roboto:ital,wght@0,300;0,400;0,700;1,300&display=swap" rel="stylesheet">
+  <link href="../css/styles.css" rel="stylesheet">
+
   <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
   <!-- scripts -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
@@ -28,40 +32,36 @@
   <!-- header -->
   <header>
     <div class="width">
-      <h1><a href="/">Hannah Stein</a></h1>
+      <h1><a href="/">H</a></h1>
         <a class="mobile-nav" title="toggle menu"><span></span></a>
         <nav>
-          <a href="/" title="portfolio" class="active">portfolio</a>
-          <a href="../about.html" title="about">about</a>
-          <a href="#contact" title="contact">contact</a>
+          <a href="/" title="portfolio">work</a>
+          <a href="about.html" title="about">about</a>
+          <!-- <a href="images/Stein_resume.pdf" target="_blank" title="Download Hannah's resume">resume</a> -->
+          <a href="mailto:hannahsteindesigns@gmail.com?subject=Hello%20from%20hannahsteindesigns.com" title="contact">contact</a>
         </nav>
     </div>
-    </header>
+  </header>
   <!-- content -->
   <section id="content" class="width case animate fade">
-    <article class="overview text-center">
+    <article class="overview">
       <h2>purchase process redesign</h2>
-      <h5>in-house designer &amp; developer at TicketBiscuit LLC</h5>
+      <h5 class="green">in-house designer &amp; developer at TicketBiscuit LLC</h5>
       <div class="progressive img">
         <img class="lowres" src="../images/case-study/ticketbiscuit/mockup-small.png" height="600px" data-image="../images/case-study/ticketbiscuit/mockup-large.png"/>
       </div>
     </article>
     <article id="challenge" class="slide">
-      <h3 class="red text-center">challenge</h3>
-      <p>The ticket-buying interface remained largely unchanged since the TicketBiscuit platform was developed about 15 years ago. Users had to click through anywhere from four to six pages before completing their transaction. The UI was initially created by back-end developers and was largely table-based. I was tasked with simplifying this process and modernizing it in both form and function without losing any functionality or disorienting returning users.</p>
+      <h3 class="green text-center">challenge</h3>
+      <p>The ticket-buying interface remained largely unchanged since the TicketBiscuit platform was developed in the early 2000s. Users had to click through anywhere from four to six pages before completing their transaction. The UI was initially created by back-end developers and was largely table-based. I was tasked with simplifying this process and modernizing it in both form and function without losing any functionality or disorienting returning users.</p>
       <section class="grid gutters text-center">
         <div class="cell m-auto"><img src="../images/case-study/ticketbiscuit/legacy-1.png" width="346px" height="400px"/></div>
         <div class="cell m-auto"><img src="../images/case-study/ticketbiscuit/legacy-2.png" width="346px" height="400px"/></div>
         <p class="cell full note">examples of components before my update</p>
       </section>
     </article>
-    <aside class="borders">
-      <div class="content">
-        <a href="tb-projects.html" title="View more TicketBiscuit projects" class="ignore"><h5>Ready for even more ticketing goodness? Check out some of my other TicketBiscuit projects. <i class="fa fa-arrow-right" aria-hidden="true"></i></h5></a>
-      </div>
-    </aside>
     <article id="process" class="slide">
-      <h3 class="red text-center">process</h3>
+      <h3 class="green text-center">process</h3>
       <section class="grid gutters">
         <div class="cell l-third">
           <h6>research</h6>
@@ -80,7 +80,7 @@
             <div class="cell m-half l-full">
               <img src="../images/case-study/ticketbiscuit/prototype.png"/>
             </div>
-            <p class="cell m-half l-full">I created some rough grayscale wireframes to show the basic functionality. When we agreed on that, I added color and iterated through hundreds of screens to nail down a design. I then used those to create detailed interactive prototypes for mobile and desktop to use for testing.</p>
+            <p class="cell m-half l-full">I created some rough grayscale wireframes to show the basic functionality. When we agreed on that, I added color and iterated through hundreds of screens to nail down a design. I then used those to create detailed interactive InVision prototypes for mobile and desktop to use for testing.</p>
           </div>
         </div>
         <div class="cell l-third">
@@ -95,7 +95,7 @@
      </section>
     </article>
     <article id="solution" class="slide">
-      <h3 class="red text-center">solution</h3>
+      <h3 class="green text-center">solution</h3>
       <div class="banner">
         <video poster="../images/case-study/ticketbiscuit/purchase-process.png" muted autoplay controls loop>
           <source src="../images/case-study/ticketbiscuit/purchase-process.mp4">
@@ -106,89 +106,30 @@
       <p>Back-end developers implemented my new total cost design that updates automatically based on decisions made in the checkout cards. I also made the ticket purchase timer more conspicuous so it didn't get lost on the page and created a new, separate cart page that can be accessed outside the purchase process. Since the screen can become very long on mobile, I made the pay button float near the bottom of the screen so it's always within reach. Lastly, I used some jQuery and CSS3 transitions to animate interactions for a smoother user experience.</p>
     </article>
     <article id="results" class="slide">
-      <h3 class="red text-center">results</h3>
+      <h3 class="green text-center">results</h3>
       <section class="grid gutters text-center stretch">
         <div class="cell m-third">
-          <h1 class="teal">30.79%</h1>
+          <h1 class="grey_medium">30.79%</h1>
           <p>more than 30% increase in conversion rates, <span class="break"></span>from 16.5% to 21.58%</p>
         </div>
         <div class="cell m-third">
-          <h1 class="teal">6 pages</h1>
+          <h1 class="grey_medium">6 pages</h1>
           <p>maximum six pages condensed into one, <span class="break"></span>reducing clicks and tech debt</p>
         </div>
         <div class="cell m-third">
-          <h1 class="teal">< 1 minute</h1>
+          <h1 class="grey_medium">< 1 minute</h1>
           <p>sub-minute purchase times for the first time <span class="break"></span>since the company began</p>
         </div>
       </section>
     </article>
     <article class="pager">
       <a class="prev" href="" title=""></a>
-      <a class="next" href="transcend.html" title="Transcend case study">next case study <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+      <a class="next" href="amy.html" title="Amy Burke Counseling case study">next case study <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
     </article>
   </section>
-  <!-- footer -->
-  <footer id="contact">
-    <div class="width">
-      <section>
-        <div class="social">
-          <h2>Let's talk.</h2>
-          <a href="mailto:&#104;&#97;&#110;&#110;&#97;&#104;&#115;&#116;&#101;&#105;&#110;&#100;&#101;&#115;&#105;&#103;&#110;&#115;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;" title="email me">
-            <span class="fa-stack">
-              <i class="fa fa-circle fa-stack-2x" aria-hidden="true"></i>
-              <i class="fa fa-envelope fa-stack-1x" aria-hidden="true"></i>
-            </span>
-            <span>hannahsteindesigns@gmail.com</span>
-          </a>
-          <!-- <a href="https://www.linkedin.com/in/hannahsteindesigns" title="connect on linkedin">
-            <span class="fa-stack">
-              <i class="fa fa-circle fa-stack-2x" aria-hidden="true"></i>
-              <i class="fa fa-linkedin fa-stack-1x" aria-hidden="true"></i>
-            </span>
-            <span>linkedin.com/in/hannahsteindesigns</span>
-          </a> -->
-          <!-- <a href="https://www.behance.net/hannahsteindesigns" title="see more of my work on behance">
-            <img src="images/behance.svg" width="24" />
-            <span>behance.net/hannahsteindesigns</span>
-          </a> -->
-          <a href="https://github.com/hannahsteindesigns/" title="see my original files on github">
-            <span class="fa-stack">
-              <i class="fa fa-circle fa-stack-2x" aria-hidden="true"></i>
-              <i class="fa fa-github fa-stack-1x" aria-hidden="true"></i>
-            </span>
-            <span>github.com/hannahsteindesigns</span>
-          </a>
-          <a href="https://issuu.com/hannahsteindesigns" title="see more of my print work on issuu">
-            <span class="fa-stack">
-              <i class="fa fa-circle fa-stack-2x" aria-hidden="true"></i>
-              <i class="fa fa-briefcase fa-stack-1x" aria-hidden="true"></i>
-            </span>
-            <span>issuu.com/hannahsteindesigns</span>
-          </a>
-        </div>
-        <div class="form">
-          <div id="form-messages"></div>
-          <form name="hscontact" id="form" method="post" action="contact.php" novalidate>
-            <div class="name-input">
-              <input required type="text" name="name" id="name">
-              <label for="name" placeholder="Name"></label>
-            </div>
-            <div class="email-input">
-              <input required type="email" name="email" id="email">
-              <label for="email" placeholder="Email"></label>
-            </div>
-            <div class="message-input">
-              <textarea required name="message" id="message"></textarea>
-              <label for="message" placeholder="Send me a message"></label>
-            </div>
-            <input type="text" id="website" name="website" style="display:none;">
-            <button type="submit" id="submit" class="full">Send</button>
-          </form>
-        </div>
-      </section>
-    </div>
-  </footer>
   <div id="scrollTop"><i class="fa fa-arrow-up" aria-label="back to top"></i></div>
-  <script src="../js/scripts.min.js"></script>
+
+  <script src="../js/scripts.js"></script>
+
 </body>
 </html>
