--- a/portfolio/transcend.html
+++ b/portfolio/transcend.html
@@ -15,8 +15,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, initial-scale=1, maximum-scale=2, user-scalable=yes, minimum-scale=1">
   <!-- styles & images -->
   <script src="https://use.fontawesome.com/1d1e476666.js"></script>
-  <link href="https://fonts.googleapis.com/css?family=Roboto+Slab|Roboto:400,700" rel="stylesheet">
-  <link href="../css/styles.min.css" rel="stylesheet">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&family=Roboto:ital,wght@0,300;0,400;0,700;1,300&display=swap" rel="stylesheet">
+  
+  <link href="../css/styles.css" rel="stylesheet">
+
   <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
   <!-- scripts -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
@@ -28,30 +33,31 @@
   <!-- header -->
   <header>
     <div class="width">
-      <h1><a href="/">Hannah Stein</a></h1>
+      <h1><a href="/">H</a></h1>
         <a class="mobile-nav" title="toggle menu"><span></span></a>
         <nav>
-          <a href="/" title="portfolio" class="active">portfolio</a>
+          <a href="/" title="portfolio">work</a>
           <a href="../about.html" title="about">about</a>
-          <a href="#contact" title="contact">contact</a>
+          <!-- <a href="../images/Stein_resume.pdf" target="_blank" title="Download Hannah's resume">resume</a> -->
+          <a href="mailto:hannahsteindesigns@gmail.com?subject=Hello%20from%20hannahsteindesigns.com" title="contact">contact</a>
         </nav>
     </div>
-    </header>
+  </header>
   <!-- content -->
   <section id="content" class="width case animate fade">
-    <article class="overview text-center">
+    <article class="overview">
       <h2>logo &amp; website designs</h2>
-      <h5>freelance designer for <a href="http://transcendcounseling.org/" target="_blank">Transcend Family &amp; Individual Counseling</a></h5>
+      <h5 class="green">freelance designer for Transcend Family &amp; Individual Counseling</h5>
       <div class="progressive img">
         <img class="lowres" src="../images/case-study/transcend/mockup-small.png" height="600px" data-image="../images/case-study/transcend/mockup-large.png"/>
       </div>
     </article>
     <article id="challenge" class="slide">
-      <h3 class="red text-center">challenge</h3>
+      <h3 class="green text-center">challenge</h3>
       <p>Transcend was a new business so my client, Robyn, and I were starting from scratch. The company first needed a logo then a website to give potential clients some information about Robyn and her practice. She knew what colors she liked and had some general ideas about iconography, but as far as the look of the site, the project was fairly open-ended. Robyn knew what she didn't like but wasn't entirely sure what she wanted the site to look like.</p>
     </article>
     <article id="process" class="slide">
-      <h3 class="red text-center">process</h3>
+      <h3 class="green text-center">process</h3>
       <section class="grid gutters">
         <div class="cell">
           <h6>research</h6>
@@ -62,7 +68,7 @@
         </div>
         <div class="cell m-half">
           <h6>logo design</h6>
-          <p>Robyn really liked the imagery of a lotus, fleur de lis, or water droplet. I did a lot of rough sketches playing with these concepts before ever touching the design on a computer. Then I created a few different logomarks and font combinations for Robyn to choose from. She mixed and matched elements from each, so I put those together and added color.</p>
+          <p>Robyn liked the imagery of a lotus, fleur de lis, or water droplet. I did a lot of rough sketches playing with these concepts before ever touching the design on a computer. Then I created a few different logomarks and font combinations for Robyn to choose from. She mixed and matched elements from each, so I put those together and added color.</p>
           <img class="contain" src="../images/case-study/transcend/logo-options.png" alt="logo options"/>
         </div>
         <div class="cell l-third">
@@ -83,8 +89,8 @@
       </section>
     </article>
     <article id="solution" class="slide">
-      <h3 class="red text-center">solution</h3>
-      <p>In this project, I really had two users in mind: the potential patients on the front end and the user creating content on the back end. For users visiting the <a href="http://transcendcounseling.org/" target="_blank">Transcend counseling site</a>, I kept the most important information "above the fold" &mdash; a link to schedule appointments, a mission statement, and new client paperwork.</p>
+      <h3 class="green text-center">solution</h3>
+      <p>In this project, I really had two users in mind: the potential patients on the front end and the user creating content on the back end. For users visiting the Transcend counseling site, I kept the most important information "above the fold" &mdash; a link to schedule appointments, a mission statement, and new client paperwork.</p>
       <section class="grid">
         <div class="cell m-full l-third text-center">
           <img id="admin" class="contain" src="../images/case-study/transcend/login.png" alt="branded admin area" />
@@ -98,90 +104,34 @@
         </section>
     </article>
     <article id="results" class="slide">
-      <h3 class="red text-center">results</h3>
-      <p>Since this isn't an ecommerce site, the results are a little harder to quantify than some <a href="ticketbiscuit.html">previous projects</a>. The most important thing to me was that my client was happy with the finished product and felt comfortable creating and editing content. Robyn's calendar has been full since the site launched. Still, some numbers:</p>
+      <h3 class="green text-center">results</h3>
+      <p>Since this isn't an e-commerce site, the results are a little harder to quantify than some <a href="ticketbiscuit.html">previous projects</a>. The most important thing to me was that my client was happy with the finished product and felt comfortable creating and editing content. Robyn's calendar has been full since the site launched. Still, some numbers:</p>
       <section class="grid gutters text-center stretch">
         <div class="cell m-third">
-          <h1 class="teal">57.4%</h1>
+          <h1 class="grey_medium">57.4%</h1>
           <p>more than half of all users visit at least two pages on the site, with a bounce rate of 42.6%</p>
         </div>
         <div class="cell m-third">
-          <h1 class="teal">2.78 pages</h1>
+          <h1 class="grey_medium">2.78 pages</h1>
           <p>users are visiting an average of nearly <span class="break"></span>3 pages per session</p>
         </div>
         <div class="cell m-third">
-          <h1 class="teal">38.9%</h1>
+          <h1 class="grey_medium">38.9%</h1>
           <p>despite conversions occurring offline, more than a third of users return to the site at least once</p>
         </div>
       </section>
     </article>
+    <article id="note" class="slide">
+      Unfortunately, Robyn was unable to keep her business open during the COVID-19 panedmic. This website is no longer active.
+    </article>
     <article class="pager">
-      <a class="prev" href="ticketbiscuit.html" title="TicketBiscuit case study"><i class="fa fa-long-arrow-left" aria-hidden="true"></i> previous case study</a>
-      <a class="next" href="" title=""></a>
+      <a class="prev" href="amy.html" title="Amy Burke Counseling case study"><i class="fa fa-long-arrow-left" aria-hidden="true"></i> previous case study</a>
+      <a class="next" href="stateserv.html" title="StateServ medical case study">next case study <i class="fa fa-long-arrow-right" aria-hidden="true"></i> </a>
     </article>
   </section>
-  <!-- footer -->
-  <footer id="contact">
-    <div class="width">
-      <section>
-        <div class="social">
-          <h2>Let's talk.</h2>
-          <a href="mailto:&#104;&#97;&#110;&#110;&#97;&#104;&#115;&#116;&#101;&#105;&#110;&#100;&#101;&#115;&#105;&#103;&#110;&#115;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;" title="email me">
-            <span class="fa-stack">
-              <i class="fa fa-circle fa-stack-2x" aria-hidden="true"></i>
-              <i class="fa fa-envelope fa-stack-1x" aria-hidden="true"></i>
-            </span>
-            <span>hannahsteindesigns@gmail.com</span>
-          </a>
-          <!-- <a href="https://www.linkedin.com/in/hannahsteindesigns" title="connect on linkedin">
-            <span class="fa-stack">
-              <i class="fa fa-circle fa-stack-2x" aria-hidden="true"></i>
-              <i class="fa fa-linkedin fa-stack-1x" aria-hidden="true"></i>
-            </span>
-            <span>linkedin.com/in/hannahsteindesigns</span>
-          </a> -->
-          <!-- <a href="https://www.behance.net/hannahsteindesigns" title="see more of my work on behance">
-            <img src="images/behance.svg" width="24" />
-            <span>behance.net/hannahsteindesigns</span>
-          </a> -->
-          <a href="https://github.com/hannahsteindesigns/" title="see my original files on github">
-            <span class="fa-stack">
-              <i class="fa fa-circle fa-stack-2x" aria-hidden="true"></i>
-              <i class="fa fa-github fa-stack-1x" aria-hidden="true"></i>
-            </span>
-            <span>github.com/hannahsteindesigns</span>
-          </a>
-          <a href="https://issuu.com/hannahsteindesigns" title="see more of my print work on issuu">
-            <span class="fa-stack">
-              <i class="fa fa-circle fa-stack-2x" aria-hidden="true"></i>
-              <i class="fa fa-briefcase fa-stack-1x" aria-hidden="true"></i>
-            </span>
-            <span>issuu.com/hannahsteindesigns</span>
-          </a>
-        </div>
-        <div class="form">
-          <div id="form-messages"></div>
-          <form name="hscontact" id="form" method="post" action="contact.php" novalidate>
-            <div class="name-input">
-              <input required type="text" name="name" id="name">
-              <label for="name" placeholder="Name"></label>
-            </div>
-            <div class="email-input">
-              <input required type="email" name="email" id="email">
-              <label for="email" placeholder="Email"></label>
-            </div>
-            <div class="message-input">
-              <textarea required name="message" id="message"></textarea>
-              <label for="message" placeholder="Send me a message"></label>
-            </div>
-            <input type="text" id="website" name="website" style="display:none;">
-            <button type="submit" id="submit" class="full">Send</button>
-          </form>
-        </div>
-      </section>
-    </div>
-  </footer>
   <div id="scrollTop"><i class="fa fa-arrow-up" aria-label="back to top"></i></div>
-  <script src="../js/scripts.min.js"></script>
+
+  <script src="../js/scripts.js"></script>
+
 </body>
 </html>
