more updates - july 2023

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
+<!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-52747973-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -10,17 +10,16 @@
 
     gtag('config', 'UA-52747973-1');
   </script>
+
   <title>hannah stein designs</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, initial-scale=1, maximum-scale=2, user-scalable=yes, minimum-scale=1">
   <!-- styles & images -->
   <script src="https://use.fontawesome.com/1d1e476666.js"></script>
-
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&family=Roboto:ital,wght@0,300;0,400;0,700;1,300&display=swap" rel="stylesheet">
-  <link href="css/styles.css" rel="stylesheet">
-  
+  <link href="css/styles.min.css" rel="stylesheet">
 
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <!-- scripts -->
@@ -62,10 +61,6 @@
         </h2>
       </div>
     </section>
-
-
-
-
     <section class="portfolio animate fade">
       <!-- TB purchase process -->
       <article class="slide lightbox">
@@ -115,10 +110,16 @@
       </article>
     </section>
   </main>
+  <!-- footer -->
+  <footer class="grid l-hide">
+    <!-- <a href="/" title="portfolio">work</a>
+    <a href="about.html" title="about" class="active">about</a> -->
+    <a href="mailto:hannahsteindesigns@gmail.com?subject=Hello%20from%20hannahsteindesigns.com" title="contact">hannahsteindesigns@gmail.com</a>
+  </footer>
   <div id="scrollTop"><i class="fa fa-arrow-up" aria-label="back to top"></i></div>
 
 
-  <script src="js/scripts.js"></script>
+  <script src="js/scripts.min.js"></script>
   
 
   <script>
