--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
+<!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-52747973-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -10,6 +10,7 @@
 
     gtag('config', 'UA-52747973-1');
   </script>
+
   <title>hannah stein designs</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, initial-scale=1, maximum-scale=2, user-scalable=yes, minimum-scale=1">
@@ -17,7 +18,8 @@
   <script src="https://use.fontawesome.com/1d1e476666.js"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&family=Roboto:ital,wght@0,300;0,400;0,700;1,300&display=swap" rel="stylesheet">  <link href="css/styles.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&family=Roboto:ital,wght@0,300;0,400;0,700;1,300&display=swap" rel="stylesheet">  
+  <link href="css/styles.min.css" rel="stylesheet">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <!-- scripts -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
@@ -44,6 +46,12 @@
     <h1>Yikes!</h1>
     <p><a href="http://hannahsteindesigns.com">Something went wrong. Click to go home!</a></p>
   </section>
+  <!-- footer -->
+  <footer class="grid l-hide">
+    <!-- <a href="/" title="portfolio">work</a>
+    <a href="about.html" title="about" class="active">about</a> -->
+    <a href="mailto:hannahsteindesigns@gmail.com?subject=Hello%20from%20hannahsteindesigns.com" title="contact">hannahsteindesigns@gmail.com</a>
+  </footer>
   <script src="js/scripts.min.js"></script>
 </body>
 </html>
