--- a/update.html
+++ b/update.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html class="update">
 <head>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
+<!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-52747973-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -10,6 +10,7 @@
 
     gtag('config', 'UA-52747973-1');
   </script>
+
   <title>hannah stein designs</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, initial-scale=1, maximum-scale=2, user-scalable=yes, minimum-scale=1">
@@ -17,7 +18,8 @@
   <script src="https://use.fontawesome.com/1d1e476666.js"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&family=Roboto:ital,wght@0,300;0,400;0,700;1,300&display=swap" rel="stylesheet">  <link href="css/styles.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&family=Roboto:ital,wght@0,300;0,400;0,700;1,300&display=swap" rel="stylesheet">  
+  <link href="css/styles.min.css" rel="stylesheet">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <!-- scripts -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
@@ -45,6 +47,12 @@
     <p class="large">It looks like your browser is out of date. In order to view the site as it was intended, you should update your browser to the latest stable build. It also helps keep you safe from anyone looking to take advantage of security flaws in older browser versions.</p>
     <p class="large">My favorite browser is Google Chrome. <a href="https://www.google.com/chrome/browser/desktop/index.html">Download the newest version of Chrome</a> or update the browser of your choice and come right back to see the site in all its glory.</p>
   </section>
+  <!-- footer -->
+  <footer class="grid l-hide">
+    <!-- <a href="/" title="portfolio">work</a>
+    <a href="about.html" title="about" class="active">about</a> -->
+    <a href="mailto:hannahsteindesigns@gmail.com?subject=Hello%20from%20hannahsteindesigns.com" title="contact">hannahsteindesigns@gmail.com</a>
+  </footer>
   <script src="js/scripts.min.js"></script>
 </body>
 </html>
