adding stateserv stuff

--- a/index.html
+++ b/index.html
@@ -60,12 +60,24 @@
       <div id="intro">
         <div class="box slide_up"></div>
         <h3 class="text slide_up">
-          <span>centering empathy for users </span>
-          <span>to craft delightful experiences</span>
+          centering empathy for users <span class="break-l"></span>to craft delightful experiences
         </h2>
       </div>
     </section>
     <section class="portfolio animate fade">
+      <!-- StateServ -->
+      <article class="slide lightbox">
+        <a class="progressive img lbSlide proportion_fix" title="<a href='portfolio/stateserv.html'>check out my StateServ case study</a>" href="images/portfolio/stateserv.png">
+          <img class="lowres" alt="prescription file process" src="images/portfolio/low-res/stateserv.png" data-image="images/portfolio/stateserv.png" />
+        </a>
+        <div class="details">
+          <h3 class="green">prescription tracking process</h3>
+          <h6>StateServ Medical</h6>
+          <p>When a patient receives medical oxygen, they are required to have a prescription on file. Before this project, that process was completed entirely outside of our web app through either email or paper files. There was no centralized location to view prescription data and no way to determine which patients were noncompliant.</p> 
+          <p>I was able to build on existing funtionality that our users were already familiar with in order to move this process into the app, and create a process for DME providers to review prescriptions for validity.</p>
+          <a class="button ignore" href="portfolio/stateserv.html" title="View Case Study">view case study</a>
+        </div>
+      </article>
       <!-- TB purchase process -->
       <article class="slide lightbox">
         <a class="progressive img lbSlide" title="<a href='portfolio/ticketbiscuit.html'>check out my TicketBiscuit case study</a>" href="images/portfolio/purchase-process.jpg">
@@ -100,16 +112,6 @@
           <h6>Transcend Individual and Family Counseling</h6>
           <p>When Robyn opened her practice in 2017 she needed to brand herself with a logo and create an online presence. She wanted something clean and simple while still allowing her personality to shine through.</p>
           <a class="button ignore" href="portfolio/transcend.html" title="View Case Study">view case study</a>
-        </div>
-      </article>
-      <!-- StateServ -->
-      <article class="slide">
-        <div class="details full">
-          <h3 class="green">prescription tracking process</h3>
-          <h6>StateServ Medical</h6>
-          <p>When a patient receives medical oxygen, they are required to have a prescription on file. Before this project, that process was completed entirely outside of our web app through either email or paper files. There was no centralized location to view prescription data and no way to determine which patients were noncompliant.</p> 
-          <p>I was able to build on existing funtionality that our users were already familiar with in order to move this process into the app, and create a process for DME providers to review prescriptions for validity.</p>
-          <a class="button ignore" href="portfolio/stateserv.html" title="More Information">more information</a>
         </div>
       </article>
     </section>
