file versioning, fixing errors

--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&family=Roboto:ital,wght@0,300;0,400;0,700;1,300&display=swap" rel="stylesheet">
-  <link href="css/styles.min.css?v=2" rel="stylesheet">
+  <link href="css/styles.min.css?v=2.2" rel="stylesheet">
 
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="icon" href="/favicon.ico?v=2">
   <link rel="manifest" href="/site.webmanifest">
   
   <!-- scripts -->
@@ -93,7 +94,7 @@
       <!-- Amy Burke Counseling -->
       <article class="slide lightbox right">
         <a class="progressive img lbSlide" title="<a href='portfolio/amy.html'>check out my Amy Burke Counseling case study</a>" href="images/portfolio/amy.png">
-          <img class="lowres" alt="purchase process design development" src="images/portfolio/low-res/amy.png" data-image="images/portfolio/amy.png" />
+          <img class="lowres" alt="counseling website design" src="images/portfolio/low-res/amy.png" data-image="images/portfolio/amy.png" />
         </a>
         <div class="details">
           <h3 class="green">branding &amp; website</h3>
