--- a/portfolio/ticketbiscuit.html
+++ b/portfolio/ticketbiscuit.html
@@ -20,11 +20,12 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&family=Roboto:ital,wght@0,300;0,400;0,700;1,300&display=swap" rel="stylesheet">
-  <link href="../css/styles.min.css?v=2" rel="stylesheet">
+  <link href="../css/styles.min.css?v=2.2" rel="stylesheet">
 
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="icon" href="/favicon.ico?v=2">
   <link rel="manifest" href="/site.webmanifest">
 
   <!-- scripts -->
@@ -41,7 +42,7 @@
         <a class="mobile-nav" title="toggle menu"><span></span></a>
         <nav>
           <a href="/" title="portfolio">work</a>
-          <a href="about.html" title="about">about</a>
+          <a href="../about.html" title="about">about</a>
           <!-- <a href="images/Stein_resume.pdf" target="_blank" title="Download Hannah's resume">resume</a> -->
           <a href="mailto:hannahsteindesigns@gmail.com?subject=Hello%20from%20hannahsteindesigns.com" title="contact">contact</a>
         </nav>
@@ -127,20 +128,20 @@
       <section class="grid gutters text-center stretch">
         <div class="cell m-third">
           <h1 class="grey_medium">30.79%</h1>
-          <p>more than 30% increase in conversion rates, <span class="break"></span>from 16.5% to 21.58%</p>
+          <p>more than 30% increase in conversion rates, <span class="break-s"></span>from 16.5% to 21.58%</p>
         </div>
         <div class="cell m-third">
           <h1 class="grey_medium">6 pages</h1>
-          <p>maximum six pages condensed into one, <span class="break"></span>reducing clicks and tech debt</p>
+          <p>maximum six pages condensed into one, <span class="break-s"></span>reducing clicks and tech debt</p>
         </div>
         <div class="cell m-third">
           <h1 class="grey_medium">< 1 minute</h1>
-          <p>sub-minute purchase times for the first time <span class="break"></span>since the company began</p>
+          <p>sub-minute purchase times for the first time <span class="break-s"></span>since the company began</p>
         </div>
       </section>
     </article>
     <article class="pager">
-      <a class="prev" href="" title=""></a>
+      <a class="prev" href="stateserv.html" title="StateServ case study"><i class="fa fa-long-arrow-left" aria-hidden="true"></i> previous case study</a>
       <a class="next" href="amy.html" title="Amy Burke Counseling case study">next case study <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
     </article>
   </section>
