--- a/portfolio/transcend.html
+++ b/portfolio/transcend.html
@@ -20,11 +20,12 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&family=Roboto:ital,wght@0,300;0,400;0,700;1,300&display=swap" rel="stylesheet">
-  <link href="../css/styles.min.css?v=2" rel="stylesheet">
+  <link href="../css/styles.min.css?v=2.2" rel="stylesheet">
 
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="icon" href="/favicon.ico?v=2">
   <link rel="manifest" href="/site.webmanifest">
 
   <!-- scripts -->
@@ -129,7 +130,7 @@
         </div>
         <div class="cell m-third">
           <h1 class="grey_medium">2.78 pages</h1>
-          <p>users are visiting an average of nearly <span class="break"></span>3 pages per session</p>
+          <p>users are visiting an average of nearly <span class="break-s"></span>3 pages per session</p>
         </div>
         <div class="cell m-third">
           <h1 class="grey_medium">38.9%</h1>
@@ -142,7 +143,6 @@
     </article>
     <article class="pager">
       <a class="prev" href="amy.html" title="Amy Burke Counseling case study"><i class="fa fa-long-arrow-left" aria-hidden="true"></i> previous case study</a>
-      <a class="next" href="stateserv.html" title="StateServ medical case study">next case study <i class="fa fa-long-arrow-right" aria-hidden="true"></i> </a>
     </article>
   </section>
   <!-- footer -->
