spell check, add auth button, fix portfolio main page alignment

--- a/index.html
+++ b/index.html
@@ -75,24 +75,24 @@
           <h3 class="green">prescription tracking process</h3>
           <h6>StateServ Medical</h6>
           <p>When a patient receives medical oxygen, they are required to have a prescription on file. Before this project, that process was completed entirely outside of our web app through either email or paper files. There was no centralized location to view prescription data and no way to determine which patients were noncompliant.</p> 
-          <p>I was able to build on existing funtionality that our users were already familiar with in order to move this process into the app, and create a process for DME providers to review prescriptions for validity.</p>
+          <p>I was able to build on existing functionality that our users were already familiar with in order to move this process into the app and create a process for DME providers to review prescriptions for validity.</p>
           <a class="button ignore" href="portfolio/stateserv.html" title="View Case Study">view case study</a>
         </div>
       </article>
       <!-- TB purchase process -->
-      <article class="slide lightbox">
+      <article class="slide lightbox right">
         <a class="progressive img lbSlide" title="<a href='portfolio/ticketbiscuit.html'>check out my TicketBiscuit case study</a>" href="images/portfolio/purchase-process.jpg">
           <img class="lowres" alt="purchase process design development" src="images/portfolio/low-res/purchase-process.jpg" data-image="images/portfolio/purchase-process.jpg" />
         </a>
         <div class="details">
           <h3 class="green">purchase process redesign</h3>
           <h6>TicketBiscuit</h6>
-          <p>TicketBiscuit is an online ticketing platform where clients can manage their events and customers can buy tickets. In this project I simplified the purchase process and modernized the design. I focused on optimizing the experience for mobile users especially &mdash; reducing clicks and increasing conversion rates.</p>
+          <p>TicketBiscuit is an online ticketing platform where clients can manage their events and customers can buy tickets. In this project, I simplified the purchase process and modernized the design. I focused on optimizing the experience for mobile users especially &mdash; reducing clicks and increasing conversion rates.</p>
           <a class="button ignore" href="portfolio/ticketbiscuit.html" title="View Case Study">view case study</a>
         </div>
       </article>
       <!-- Amy Burke Counseling -->
-      <article class="slide lightbox right">
+      <article class="slide lightbox">
         <a class="progressive img lbSlide" title="<a href='portfolio/amy.html'>check out my Amy Burke Counseling case study</a>" href="images/portfolio/amy.png">
           <img class="lowres" alt="counseling website design" src="images/portfolio/low-res/amy.png" data-image="images/portfolio/amy.png" />
         </a>
@@ -104,7 +104,7 @@
         </div>
       </article>
       <!-- Transcend -->
-      <article class="slide lightbox">
+      <article class="slide lightbox right">
         <a class="progressive img lbSlide"  title="<a href='portfolio/transcend.html'>check out my Transcend case study</a>" href="images/portfolio/transcend.jpg">
           <img class="lowres" alt="therapy website design development" src="images/portfolio/low-res/transcend.jpg" data-image="images/portfolio/transcend.jpg">
         </a>
