--- a/portfolio/transcend.html
+++ b/portfolio/transcend.html
@@ -113,7 +113,7 @@
         <div class="cell m-full l-twothirds">
           <p>I provided a contact page with a spam-free form but kept persistent contact information in the footer. Alongside the basic information and FAQ pages, Robyn has a blog with the ability to view posts by date or category tag. The front page can show either the most recent posts or any post marked as "featured" that she wants to pin to the front.</p>
           <p class="text-center"><img class="contain" src="../images/case-study/transcend/palette.png" alt="custom color palette" /></p>
-          <p>I wanted to keep a consistent, personalized experience even on the user dashboard, for example branding the login page. To make sure the pages would be cohesive even after handing the site off to my client, I created reusable styles for blog posts and populated the WISYWIG editor with colors that correspond to the design. To help Robyn get a snapshot of her visitors, I set up Google analytics and integrated it with her WordPress dashboard for easy access.</p>
+          <p>I wanted to keep a consistent, personalized experience even on the user dashboard, for example branding the login page. To make sure the pages would be cohesive even after handing the site off to my client, I created reusable styles for blog posts and populated the WISYWIG editor with colors that correspond to the design. To help Robyn get a snapshot of her visitors, I set up Google Analytics and integrated it with her WordPress dashboard for easy access.</p>
         </div>
         </section>
     </article>
@@ -139,7 +139,7 @@
       </section>
     </article>
     <article id="note" class="slide">
-      Unfortunately, Robyn was unable to keep her business open during the COVID-19 panedmic. This website is no longer active.
+      Unfortunately, Robyn was unable to keep her business open during the COVID-19 pandemic. This website is no longer active.
     </article>
     <article class="pager">
       <a class="prev" href="amy.html" title="Amy Burke Counseling case study"><i class="fa fa-long-arrow-left" aria-hidden="true"></i> previous case study</a>
