update resume, small changes to about text, adding meta descriptions

--- a/about.html
+++ b/about.html
@@ -14,6 +14,7 @@
   <title>hannah stein designs | about</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, initial-scale=1, maximum-scale=2, user-scalable=yes, minimum-scale=1">
+  <meta name="description" content="Read about Hannah's design philosophy and job experience.">
   <!-- styles & images -->
   <script src="https://use.fontawesome.com/1d1e476666.js"></script>
   
@@ -63,8 +64,8 @@
           <p><a href="images/Stein_resume.pdf" target="_blank" title="Download Hannah's resume"><i class="fa fa-download"></i>Download resume</a></p>
           <p>I believe that technology should above all make life easier. I am an advocate for the user and love the challenge of marrying the best interests of user and business to create a solution that benefits everyone. </p>
           <p>My early roots are in print design, and I still sometimes rely on those fundamental design principles and knowledge of how people interact with information on a base level. I'm fascinated with how those principles scale &mdash; or don't &mdash; to web and mobile interactions as well as the unique problems new technologies face.</p>
-          <p id="stateserv">In my current position at StateServ, I create and update interfaces for a SaaS web app. Our software allows hospices to order medical equipment and manage patients, and the equipment provider to manage delivery and pickup orders. Here, an intuitive UI not only can provide a pleasant experience, but a frustrating one can negatively affect patient care if our clinical users can’t perform tasks as expected. In addition to the web portal, in 2023 we began design on a native iOS app for one subset of users.</p>
-          <p>My responsibilities include researching and gathering feedback from both internal and external users of our software; attending requirements-gathering meetings with the business to ensure the needs of users are considered; identifying inefficiencies in both designs and front-end code; designing intuitive interfaces while maintaining brand and experience consistency; and implementing front-end code to make those interfaces a reality.</p>
+          <p id="stateserv">In my current position at StateServ, I create and update interfaces for a SaaS web app and iOS native app. Our software allows hospices to order medical equipment and manage patients; the equipment provider to manage delivery and pickup orders; and drivers who deliver and pick up equipment to manage their routes, orders, and truck inventory. Here, an intuitive UI not only can provide a pleasant experience, but a frustrating one can negatively affect patient care if our clinical users can’t perform tasks as expected.</p>
+          <p>My responsibilities include researching and gathering feedback from both internal and external users of our software; attending requirements-gathering meetings with key stakeholders to ensure the needs of users are considered; identifying inefficiencies in both designs and front-end code; designing intuitive interfaces while maintaining brand and experience consistency; and implementing front-end code to make those interfaces a reality.</p>
           <p class="text-center m-hide"><a href="https://www.nngroup.com/ux-certification/verify/"> <img src="https://media.nngroup.com/nng-uxc-badge.png" width="200" height="174" alt="UX Certification Badge from Nielsen Norman Group" /></a></p>
       </div>
     </article>
