--- a/portfolio/amy.html
+++ b/portfolio/amy.html
@@ -14,6 +14,7 @@
   <title>hannah stein designs</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, initial-scale=1, maximum-scale=2, user-scalable=yes, minimum-scale=1">
+  <meta name="description" content="A case study of logo, branding, and website design for a personal counselor.">
   <!-- styles & images -->
   <script src="https://use.fontawesome.com/1d1e476666.js"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
